--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "dev":"json-server --watch database/db.json"
+    "dev": "json-server --watch database/db.json"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "firebase": "^8.10.0",
     "jquery": "^3.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
