--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "date-fns": "^2.28.0",
     "firebase": "^8.10.0",
     "jquery": "^3.6.0",
     "vue": "^3.0.0",
